@@ -20,7 +20,7 @@ class LanguagesControllerInstalled extends JController
 	/**
 	 * task to set the default language
 	 */
-	function publish()
+	function setDefault()
 	{
 		// Check for request forgeries
 		JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
