@@ -898,6 +898,7 @@ JLIB_INSTALLER_ERROR_FILE_UNINSTALL_LOAD_ENTRY="Files Uninstall: Could not load 
 JLIB_INSTALLER_ERROR_FILE_UNINSTALL_LOAD_MANIFEST="Files Uninstall: Could not load manifest file"
 JLIB_INSTALLER_ERROR_FOLDER_IN_USE="Another extension is already using directory [%s]"
 JLIB_INSTALLER_ERROR_LANG_DISCOVER_STORE_DETAILS="Language Discover install: Failed to store language details"
+JLIB_INSTALLER_ERROR_LANG_UNINSTALL_DEFAULT="This language can't be uninstalled as long as it is defined as a default language."
 JLIB_INSTALLER_ERROR_LANG_UNINSTALL_DIRECTORY="Language Uninstall: Unable to remove the specified Language directory."
 JLIB_INSTALLER_ERROR_LANG_UNINSTALL_ELEMENT_EMPTY="Language Uninstall: Element is empty, cannot uninstall files"
 JLIB_INSTALLER_ERROR_LANG_UNINSTALL_PATH_EMPTY="Language Uninstall: Language path is empty, cannot uninstall files"
@@ -945,6 +946,8 @@ JLIB_INSTALLER_ERROR_TPL_UNINSTALL_TEMPLATE_ID_EMPTY="Template Uninstall: Templa
 JLIB_INSTALLER_ERROR_TPL_UNINSTALL_WARNCORETEMPLATE="Template Uninstall: Trying to uninstall a core template: %s"
 JLIB_INSTALLER_ERROR_UNKNOWN_CLIENT_TYPE="Unknown Client Type [%s]"
 JLIB_INSTALLER_INSTALL="Install"
+JLIB_INSTALLER_NOTICE_LANG_RESET_USERS="Language set to Default for %d users"
+JLIB_INSTALLER_NOTICE_LANG_RESET_USERS_1="Language set to Default for %d user"
 JLIB_INSTALLER_UNINSTALL="Uninstall"
 JLIB_INSTALLER_UPDATE="Update"
 JLIB_MAIL_FUNCTION_DISABLED="The mail() function has been disabled and the mail cannot be sent."
